--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(DiligentCore)
 
 # Define GNU standard installation directories such as CMAKE_INSTALL_INCLUDEDIR, CMAKE_INSTALL_LIBDIR, etc.
 include(GNUInstallDirs)
-
+include(FindPackages.cmake)
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
 # Generate XCode schemes
