--- a/Tests/GPUTestFramework/CMakeLists.txt
+++ b/Tests/GPUTestFramework/CMakeLists.txt
@@ -81,12 +81,12 @@ endif()
 
 if(GL_SUPPORTED OR GLES_SUPPORTED)
     if(PLATFORM_WIN32)
-        target_link_libraries(Diligent-GPUTestFramework PUBLIC GLEW::glew opengl32.lib)
+        target_link_libraries(Diligent-GPUTestFramework PUBLIC GLEW::glew_s opengl32.lib)
     elseif(PLATFORM_LINUX)
-        target_link_libraries(Diligent-GPUTestFramework PUBLIC GLEW::glew)
+        target_link_libraries(Diligent-GPUTestFramework PUBLIC GLEW::glew_s)
     elseif(PLATFORM_MACOS)
         find_package(OpenGL REQUIRED)
-        target_link_libraries(Diligent-GPUTestFramework PUBLIC GLEW::glew ${OPENGL_LIBRARY})
+        target_link_libraries(Diligent-GPUTestFramework PUBLIC GLEW::glew_s ${OPENGL_LIBRARY})
     elseif(PLATFORM_EMSCRIPTEN)
 
     else()
