--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 3.6)
 
-if(TARGET gtest)
+if(TARGET GTest::gtest)
     add_subdirectory(TestFramework)
     add_subdirectory(GPUTestFramework)
     if(DILIGENT_BUILD_CORE_TESTS)
