--- a/Common/CMakeLists.txt
+++ b/Common/CMakeLists.txt
@@ -64,7 +64,8 @@ target_include_directories(Diligent-Common
 PRIVATE
     include
 PUBLIC
-    interface
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/interface>
+    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
 )
 
 target_link_libraries(Diligent-Common
