--- a/Graphics/CMakeLists.txt
+++ b/Graphics/CMakeLists.txt
@@ -4,9 +4,9 @@ set(DLL_REL_SUFFIX _${ARCH}r)
 set(DLL_DBG_SUFFIX _${ARCH}d)
 
 add_library(Diligent-GraphicsEngineInterface INTERFACE)
-target_include_directories(Diligent-GraphicsEngineInterface
-INTERFACE
-    GraphicsEngine/interface
+target_include_directories(Diligent-GraphicsEngineInterface INTERFACE
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/GraphicsEngine/interface>
+    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/GraphicsEngine/interface>
 )
 target_link_libraries(Diligent-GraphicsEngineInterface
 INTERFACE
