--- a/Graphics/GraphicsAccessories/CMakeLists.txt
+++ b/Graphics/GraphicsAccessories/CMakeLists.txt
@@ -25,7 +25,8 @@ add_library(Diligent-GraphicsAccessories STATIC ${SOURCE} ${INTERFACE})
 
 target_include_directories(Diligent-GraphicsAccessories
 PUBLIC
-    interface
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/interface>
+    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
 )
 
 target_link_libraries(Diligent-GraphicsAccessories
