--- a/Platforms/Basic/CMakeLists.txt
+++ b/Platforms/Basic/CMakeLists.txt
@@ -25,7 +25,8 @@ set_common_target_properties(Diligent-BasicPlatform)
 
 target_include_directories(Diligent-BasicPlatform 
 PUBLIC
-    interface
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/interface>
+    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
 )
 
 target_link_libraries(Diligent-BasicPlatform 
